All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/PM_Plan_Template__c.object-meta.xml
<CustomObject>
    <description>This is a template for creating preventive maintenance plan, it has definitions for products, schedules and tasks that are needs to be performed as part of Preventive Maintenance.</description>
    <label>PM Plan Template</label>
    <nameField>
        <label>PM Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PM Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>