All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account (Visit Only)</fullName>
            </value>
            <value>
                <fullName>Product (Must Have IB)</fullName>
            </value>
            <value>
                <fullName>Location (Must Have Location)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>