All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/IB_Criteria__c.field-meta.xml
<CustomField>
    <fullName>IB_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed Product Criteria</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>PM Plan Templates</relationshipLabel>
    <relationshipName>PM_Plan_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>