All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/Location_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Location_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Criteria</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>PM Plan Templates (Location Criteria)</relationshipLabel>
    <relationshipName>PM_Plan_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>