All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Adjustment_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Adjustment_Activity_Date__c</fullName>
    <description>This field indicates the date field on Work Order which will be considered as completion date.</description>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SVMXC__Completed_Date_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Actual_Initial_Response__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Actual_Onsite_Response__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Actual_Resolution__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Actual_Restoration__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Canceled_Date_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Closed_On__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Acknowledged_By_Technician_Date_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Finished_Onsite_Date_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__First_Assigned_DateTime__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__First_Queued_DateTime__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__FirstScheduledDateTime__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Initial_Response_Customer_By__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Initial_Response_Internal_By__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Onsite_Response_Customer_By__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Onsite_Response_Internal_By__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__OptiMax_Last_Run_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__SM_Optimizer_Message_Creation_Date_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Preferred_End_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Preferred_Start_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Previous_Scheduled_Date_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Resolution_Customer_By__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Resolution_Internal_By__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Restoration_Customer_By__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Restoration_Internal_By__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Scheduled_Date_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__SLA_Clock_Pause_Restart_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__SLA_Clock_Pause_Time__c</fullName>
            </value>
            <value>
                <fullName>SVMXC__Started_Driving_To_Location_Date_Time__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>