All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Adjustment_Max__c.field-meta.xml
<CustomField>
    <fullName>SM_Adjustment_Max__c</fullName>
    <description>This field indicates date difference larger than this value will use the maximum allowed difference. The max value cannot exceed the frequency of recurrence. For example, if the frequency is every 2 months, this value has to be 60 days or less. If this value is blank, frequency of recurrence is implied</description>
    <label>Max Activity Changed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>