All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Adjustment_Min__c.field-meta.xml
<CustomField>
    <fullName>SM_Adjustment_Min__c</fullName>
    <description>This field indicates date difference smaller than this value will be ignored and the next Schedule On date is not affected. For example, if this value is 14, the next Scheduled On date is not affected if the Activity Date is less than 14 days after the Preferred Start date of the WO</description>
    <label>Min Activity Changed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>