All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Adjustment_Unit__c.field-meta.xml
<CustomField>
    <fullName>SM_Adjustment_Unit__c</fullName>
    <description>This field indicates the frequency unit of adjustment</description>
    <label>Adjusted Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>