All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Adjustment_Value__c.field-meta.xml
<CustomField>
    <fullName>SM_Adjustment_Value__c</fullName>
    <description>This field is used if adjustment type is Fixed,this value in multiple of adjustment unit is added to the Scheduled On date as long as the Activity Date exceeds the minimum value of adjustment range; max adjustment value does not apply.</description>
    <label>Adjusted Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>