All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Advanced_Expression__c.field-meta.xml
<CustomField>
    <fullName>SM_Advanced_Expression__c</fullName>
    <description>Advanced expression for condition rules</description>
    <inlineHelpText>Advanced expression for condition rules</inlineHelpText>
    <label>Advanced Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>