All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Condition_Type__c</fullName>
    <label>Condition Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>