All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Unit_Type__c</fullName>
    <description>Units to be applied on the delay field by which the first PM work order to be delayed from the start date of the PM Plan.</description>
    <label>Start Date Delay Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>