All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>SM_Unit_Value__c</fullName>
    <description>Time by which the first PM work order to be delayed from the start date of the PM Plan.</description>
    <label>Start Date Delay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>