All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/fields/SM_Work_Order_Purpose__c.field-meta.xml
<CustomField>
    <fullName>SM_Work_Order_Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Task Template object.</description>
    <inlineHelpText>Reference to Task Template object.</inlineHelpText>
    <label>Work Order Purpose</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>PM Plan Templates</relationshipLabel>
    <relationshipName>PM_Plan_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>