All_Component_DX/force-app/main/default/objects/PM_Plan_Template__c/listViews/All_PM_Plan_Templates.listView-meta.xml
<ListView>
    <fullName>All_PM_Plan_Templates</fullName>
    <columns>NAME</columns>
    <columns>Coverage_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All PM Plan Templates</label>
    <language>en_US</language>
</ListView>